vlib/v/checker/tests/global_const_call_init_err.vv
@[has_globals]
module main

fn make_value() int {
	return 123
}

__global const bad = make_value()

fn main() {
	assert bad == 123
}
